Completed bot code

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ QnAKnowledgebaseId=ac939195-40bb-45dd-a8d4-7f6e95bf1bba
 QnAAuthKey=1e5b45fb-80e7-4329-8dc0-be67c0e0f74a
 QnAEndpointHostName=https://dova-qna-maker.azurewebsites.net/qnamaker
 
-LuisAppId=
-LuisAPIKey=
-LuisAPIHostName=
+LuisAppId=565828f1-ecb3-48c9-bd87-1650f5e5e07c
+LuisAPIKey=54854769a1ab4db98139080fcdd15745
+LuisAPIHostName=https://westus.api.cognitive.microsoft.com/
+
+SchedulerEndpoint=https://dova-scheduler.azurewebsites.net/
